--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 
 spring.batch.jdbc.initialize-schema=always
-spring.batch.job.enabled=false
+spring.batch.job.enabled=true
