--- a/spring-batch/src/main/resources/application.properties
+++ b/spring-batch/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 file.input=output.csv
-spring.datasource.url=jdbc:mysql://database:3306/test?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
